--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "dependencies": {
     "express": "^4.14.0",
-    "mssql": "^3.3.0"
+    "mssql": "^3.3.0",
+    "tedious": "^1.14.0"
   },
   "devDependencies": {},
   "scripts": {
