--- a/secret/mssql.json.template
+++ b/secret/mssql.json.template
@@ -1,6 +1,6 @@
 {
-    "user": "HAY04",
+    "user": "INFO445",
     "password": "",
-    "server": "localhost",
+    "server": "IS-HAY04.ischool.uw.edu",
     "database": "Copperworks"
 }
