working for later

--- a/secret/mssql.json.template
+++ b/secret/mssql.json.template
@@ -2,5 +2,5 @@
     "user": "INFO445",
     "password": "",
     "server": "IS-HAY04.ischool.uw.edu",
-    "database": "Copperworks"
+    "database": "CopperworksClient"
 }
